--- a/sass/imports/_index.scss
+++ b/sass/imports/_index.scss
@@ -1,1 +1,10 @@
-@forward "../imports/colors"
+@forward "colors";
+@forward "./bootstrap/toast-message";
+@forward "./bootstrap/bg-colors";
+@forward "./bootstrap/text-colors";
+@forward "./bootstrap/font-size";
+@forward "./bootstrap/height";
+@forward "./bootstrap/border/colors";
+@forward "./bootstrap/border/focus-colors";
+@forward "./bootstrap/border/hover-colors";
+@forward "./bootstrap/border/radius";
