--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,28 +1,105 @@
 @use "./imports/" as *;
 
 * {
+    margin: 0;
+    padding: 0;
     font-family: "Karla", sans-serif;
-    font-size: 16px;
-    margin: 0px;
-    padding: 0px;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
 }
 
-.inputErr {
-    border-color: red;
-}
-
-p {
-    color: magenta;
-}
-
-.gridCntr {
-    background-color: green;
-    display: grid;
-    grid-template-rows: 1fr, 1fr;
-    grid-template-columns: 1fr 1fr;
-    > div:first-child {
-        background-color: pink;
-        grid-column-start: 1;
-        grid-column-end: -1;
+.pageHeight {
+    @media (min-height: 904px) and (min-width: 500px) {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
     }
+}
+
+header,
+footer {
+    height: 50px;
+}
+
+.errMsg {
+    color: transparent;
+    margin: 0;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .hover-btn {
+        &:hover {
+            background-color: $greyDarker;
+        }
+    }
+}
+
+h1 {
+    font-size: 1rem;
+}
+
+input {
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+[type="text"],
+[type="email"] {
+    outline: none;
+}
+
+.qtypeUnchecked {
+    border: solid $greyMedium 1px;
+    input {
+        height: 19px;
+        width: 19px;
+        appearance: none;
+        background-color: $white;
+        margin: 0;
+        font: inherit;
+        border: 1.5px solid $greyMedium;
+        border-radius: 50%;
+        z-index: 2;
+    }
+    svg {
+        translate: -19.5px;
+        z-index: 1;
+        opacity: 0;
+    }
+}
+
+.qtypeChecked {
+    background-color: $greenLighter;
+    border: solid $greenMedium 1px;
+    input {
+        opacity: 0;
+    }
+    svg {
+        opacity: 1;
+    }
+}
+
+textarea {
+    resize: none;
+}
+
+.consent {
+    min-height: 18px;
+    min-width: 18px;
+    background-color: $white;
+    border: solid 1px $greyMedium;
+    border-radius: 1.5px;
+    z-index: 2;
+    appearance: none;
+}
+
+.checkbox {
+    min-height: 18px;
+    min-width: 18px;
+    translate: -18px 0px;
+    z-index: 1;
 }
