--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,22 +11,27 @@
 }
 
 .pageHeight {
-    @media (min-height: 904px) and (min-width: 500px) {
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 header,
 footer {
-    height: 50px;
+    min-height: 50px;
 }
 
 .errMsg {
-    color: transparent;
-    margin: 0;
+    color: $red;
+    margin-top: -8px;
+    &:last-of-type {
+        margin-top: 8px;
+    }
+}
+
+textarea {
+    margin-bottom: 4px;
 }
 
 @media (hover: hover) and (pointer: fine) {
