--- a/css/main.css
+++ b/css/main.css
@@ -1,52 +1,3 @@
-.toast {
-  border: none;
-}
-
-.toast-header {
-  background-color: transparent;
-  border: none;
-}
-
-.bg-white {
-  background-color: hsl(0, 0%, 100%);
-}
-
-.bg-greyDarker {
-  background-color: hsl(187, 24%, 22%);
-}
-
-.bg-greenMedium {
-  background-color: hsl(169, 82%, 27%);
-}
-
-.bg-greenLighter {
-  background-color: hsl(148, 38%, 91%);
-}
-
-.text-white {
-  color: hsl(0, 0%, 100%);
-}
-
-.text-greyMedium {
-  color: hsl(186, 15%, 59%);
-}
-
-.fs-55 {
-  font-size: 1.125rem;
-}
-
-.h-1 {
-  height: 2.75rem;
-}
-
-.h-2 {
-  height: 3.5rem;
-}
-
-.h-3 {
-  height: 5rem;
-}
-
 .border-greyMedium {
   border: solid hsl(186, 15%, 59%) 1px;
 }
@@ -67,6 +18,59 @@
   border-radius: 12px;
 }
 
+.bg-white {
+  background-color: hsl(0, 0%, 100%);
+}
+
+.bg-greyDarker {
+  background-color: hsl(187, 24%, 22%);
+}
+
+.bg-greenMedium {
+  background-color: hsl(169, 82%, 27%);
+}
+
+.bg-greenLighter {
+  background-color: hsl(148, 38%, 91%);
+}
+
+.fs-55 {
+  font-size: 1.125rem;
+}
+
+.h-1 {
+  height: 2.75rem;
+}
+
+.h-2 {
+  height: 3.5rem;
+}
+
+.h-3 {
+  height: 5rem;
+}
+
+.text-red {
+  color: hsl(0, 66%, 54%);
+}
+
+.text-white {
+  color: hsl(0, 0%, 100%);
+}
+
+.text-greyMedium {
+  color: hsl(186, 15%, 59%);
+}
+
+.toast {
+  border: none;
+}
+
+.toast-header {
+  background-color: transparent;
+  border: none;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -77,11 +81,13 @@
   font-size: 1rem;
 }
 
-.pageHeight {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+@media (min-height: 904px) and (min-width: 500px) {
+  .pageHeight {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 }
 
 header,
@@ -90,15 +96,21 @@ footer {
 }
 
 .errMsg {
+  color: transparent;
+  margin-bottom: 0;
+}
+@media (min-width: 0px) {
+  .errMsg {
+    margin-top: -12px;
+  }
+}
+@media (min-width: 500px) {
+  .errMsg {
+    margin-top: -8px;
+  }
+}
+.errMsg.text-red {
   color: hsl(0, 66%, 54%);
-  margin-top: -8px;
-}
-.errMsg:last-of-type {
-  margin-top: 8px;
-}
-
-textarea {
-  margin-bottom: 4px;
 }
 
 @media (hover: hover) and (pointer: fine) {
@@ -110,7 +122,7 @@ h1 {
   font-size: 1rem;
 }
 
-input:hover {
+input:hover, label:hover {
   cursor: pointer;
 }
 
